--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,9 +1,20 @@
 .image-list {
     columns: 6 200px;
     column-gap: 10px;
+    column-fill: auto;
+    column-rule: 1px solid lightgray;
+    column-span: all;
+    column-width: 200px;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+
 }
 
 img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     margin-bottom: 10px;
+    
 }
